--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <a href="http://h.ottdbcn.com:8080/bn1hd/tracks-v1a1/mono.m3u8" target="_blank">beIN Sports 1</a>
         <a href="http://h.ottdbcn.com:8080/bn2hd/tracks-v1a1/mono.m3u8" target="_blank">beIN Sports 2</a>
         <a href="http://h.ottdbcn.com:8080/bn3hd/tracks-v1a1/mono.m3u8" target="_blank">beIN Sports 3</a>
-        <a href="http://h.ottdbcn.com:8080/bn4hd/tracks-v1a1/mono.m3u8" target="_blank">beIN Sports 4</a>
+        <a href="http://stream.mytvplus.net:7006/sport/ch5/ch5_1080.m3u8" target="_blank">beIN Sports 5</a>
     </div>
 </div>
 
 </body>
 </html>
+
