--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 
 <!-- روابط قنوات رياضية عراقية -->
 <div class="channels">
-    <a href="http://82.198.251.24:2082/live/play/VkZOcmFqUXZkMVFyYUVKVlRsVnBVMFlyYWpJd0sxcG1lVVpvZGxkMGVuTlhVMmxWTWpOd2IwcEhWVDA9/1142953" target="_blank">الرابعـة 1</a>
-    <a href="http://149.57.87.12/live/65787/54353/113629.m3u8?token=aWVMeUtHdGRXMkNlNE5H" target="_blank">الرابعـة 2</a>
-    <a href="http://82.198.251.24:2082/live/play/YjFoUVEyNXFOMWxhU1V0MmFUUkdaM0pNYUVSWmRGTnllSFJLYTNkdVIxQkxLMjVhUWxsTWQwODJORDA9/156475" target="_blank">العراقية الرياضية</a>
+    <a href="http://82.198.251.24:2082/live/play/VkZOcmFqUXZkMVFyYUVKVlRsVnBVMFlyYWpJd0sxcG1lVVpvZGxkMGVuTlhVMmxWTWpOd2IwcEhWVDA9/1142953" target="_blank">قريبا</a>
+    <a href="http://149.57.87.12/live/65787/54353/113629.m3u8?token=aWVMeUtHdGRXMkNlNE5H" target="_blank">قريبا</a>
+    <a href="http://82.198.251.24:2082/live/play/YjFoUVEyNXFOMWxhU1V0MmFUUkdaM0pNYUVSWmRGTnllSFJLYTNkdVIxQkxLMjVhUWxsTWQwODJORDA9/156475" target="_blank">قريبا</a>
 </div>
 
 <!-- رابط قناة التليجرام -->
@@ -229,4 +229,5 @@
 
 </body>
 </html>
+
 
