--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 <!-- روابط قنوات رياضية عراقية -->
 <div class="channels">
     <a href="http://82.198.251.24:2082/live/play/VkZOcmFqUXZkMVFyYUVKVlRsVnBVMFlyYWpJd0sxcG1lVVpvZGxkMGVuTlhVMmxWTWpOd2IwcEhWVDA9/1142953" target="_blank">قريبا</a>
-    <a href="http://4host.cc:8080/live/224431844009/618211192054/428.m3u" target="_blank">قريبا</a>
-    <a href="http://82.198.251.24:2082/live/play/YjFoUVEyNXFOMWxhU1V0MmFUUkdaM0pNYUVSWmRGTnllSFJLYTNkdVIxQkxLMjVhUWxsTWQwODJORDA9/156475" target="_blank">قريبا</a>
+    <a href="http://4host.cc:8080/224431844009/618211192054/428" target="_blank">قريبا</a>
+    <a href="http://4host.cc:8080/live/224431844009/618211192054/428.m3u8" target="_blank">قريبا</a>
 </div>
 
 <!-- رابط قناة التليجرام -->
@@ -229,6 +229,7 @@
 
 </body>
 </html>
+
 
 
 
