--- a/index.html
+++ b/index.html
@@ -1398,7 +1398,7 @@ const liveGroups = {
         },
         {
             name: "BEIN SPORT 3 4k",
-            url: "http://4host.cc:8080/live/224431844009/618211192054/96396.m3u8",
+            url: "http://45.155.90.27:8080/live/224431844009/618211192054/96396.m3u8?token=yybXyzX.yUaHUay.X.dazUya.yczHbdcU.X.y.IQ.m3u8.9e5ff00bdd191e25902e6c463ed41317ef3c4ef7d829a74cdc3f8ccf1afd8d91...NGhvc3QuY2M6ODA4MA==",
             quality: "4K",
             note: ""
         },
@@ -9751,3 +9751,4 @@ const liveGroups = {
 
 </body>
 </html>
+
